fixed navbar collapse angular-style. Made it sticky for time being

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -13,6 +13,10 @@ html, body {
     -webkit-text-size-adjust: none;
 }
 
+body {
+    padding-top: 70px
+}
+
 .wrap {
     min-height: 100%;
 }
